edit Task Functionality and Create the SupervisorDashboard